[package]
name = "arculus"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["rt", "critical-section-impl"] }
embedded-hal = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.4"
critical-section = { version = "1.2.0" }
pio = "0.2.0"

[[bin]]
name = "arculus"
path = "src/main.rs"
test = false
doctest = false
bench = false
